--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
+python-jose==1.0.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
