--- a/backend/logging.conf
+++ b/backend/logging.conf
@@ -1,28 +1,28 @@
 [loggers]
-keys=root,pyBoard
+keys=root,simpleExample
 
 [handlers]
 keys=consoleHandler
 
 [formatters]
-keys=detailedFormatter
+keys=simpleFormatter
 
 [logger_root]
 level=DEBUG
 handlers=consoleHandler
 
-[logger_pyBoard]
+[logger_simpleExample]
 level=DEBUG
 handlers=consoleHandler
-qualname=pyBoard
+qualname=simpleExample
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
-formatter=detailedFormatter
+formatter=simpleFormatter
 args=(sys.stdout,)
 
-[formatter_detailedFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s : Line %(lineno)s - %(message)s
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
